<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_habito" />

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radioGroupFrequencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/radioDiario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diario" />

        <RadioButton
            android:id="@+id/radioSemanal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semanal" />

        <RadioButton
            android:id="@+id/radioMensal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mensal" />
    </RadioGroup>

    <!-- dois cliques para salvar -->
    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Salvar Hábito"
        android:layout_marginTop="8dp" />

    <ListView
        android:id="@+id/listViewHabitos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="12dp" />

    <!-- mensagem abaixo para falar sobre o idioma mudar conforme a lingua do android studio -->
    <TextView
        android:id="@+id/tvIdiomaInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idioma_info"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:textColor="#888888"
        android:textSize="14sp" />

</LinearLayout>
